fix bug so that only dashboard visible is one appropriate for user

--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -49,9 +49,14 @@ nav ul li a:hover {
     padding: 2rem;
     max-width: 1200px;
     margin: 0 auto;
-
-    .dashboard-container > */*:not(.visible-dashboard)*/ {
+    
+    /*
+    .dashboard-container > *:not(.visible-dashboard) {
         display: none !important;
+    }*/
+
+    .hidden-dashboard {
+        display: none;
     }
 }
 
